--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,16 +3,11 @@
 
 FROM mcr.microsoft.com/devcontainers/base:ubuntu-24.04
 
-# Install dependencies
+# Install additional dependencies needed for Elixir/Erlang
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-      curl git unzip build-essential ca-certificates build-essential inotify-tools && \
+      libwxgtk3.0-gtk3-dev libgl1-mesa-dev libglu1-mesa-dev libpng-dev libssh-dev unixodbc-dev xsltproc fop libxml2-utils libffi-dev libgmp-dev inotify-tools && \
     rm -rf /var/lib/apt/lists/*
-
-# Install mise (universal version manager)
-ENV MISE_VERSION=v2025.8.21
-RUN curl -sSL https://mise.run | bash
-ENV PATH="/root/.local/share/mise/bin:/root/.local/share/mise/shims:${PATH}"
 
 # Set default workdir
 WORKDIR /workspaces
