--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,8 @@
       },
       "extensions": [
         "jakebecker.elixir-ls",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+        "hverlin.mise-vscode"
       ]
     }
   },
